--- a/portfolio.html
+++ b/portfolio.html
@@ -26,23 +26,23 @@
   <body>
     <!--header-->
 
-    <header class="header-content">
-      <div class="container nav">
-        <nav class="header-nav">
-          <a lang="en" class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
+    <header class="header__content">
+      <div class="container container__nav">
+        <nav class="header__nav">
+          <a lang="en" class="logo" href="./index.html"><span class="logo--web">Web</span>Studio</a>
 
-          <ul class="header-link list">
+          <ul class="header__link list">
             <li class="item"><a class="link" href="./index.html">Студия</a></li>
-            <li class="item is-active">
-              <a class="link current" href="./portfolio.html"> Портфолио</a>
+            <li class="item is--active">
+              <a class="link link__current" href="./portfolio.html"> Портфолио</a>
             </li>
             <li class="item"><a class="link" href="./index.html">Контакты</a></li>
           </ul>
         </nav>
-        <ul class="contact-link link">
+        <ul class="contact__link link">
           <li class="item item icon">
             <a class="link" href="mailto:info@devstudio.com">
-              <svg class="icon-mail" width="16" height="12">
+              <svg class="icon__mail" width="16" height="12">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
               info@devstudio.com
@@ -50,7 +50,7 @@
           </li>
           <li class="item item icon">
             <a class="link" href="tel:+380961111111">
-              <svg class="icon-tel" width="10" height="16">
+              <svg class="icon__tel" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
               +38 096 111 11 11
@@ -71,167 +71,167 @@
 
           <ul class="buttons list">
             <li class="item">
-              <button class="button active" type="button">Все</button>
+              <button class="portfolio__button button active" type="button">Все</button>
             </li>
 
             <li class="item">
-              <button class="button web" type="button">Веб-сайты</button>
+              <button class="portfolio__button button web" type="button">Веб-сайты</button>
             </li>
             <li class="item">
-              <button class="button app" type="button">Приложения</button>
+              <button class="portfolio__button button app" type="button">Приложения</button>
             </li>
 
             <li class="item">
-              <button class="button design" type="button">Дизайн</button>
+              <button class="portfolio__button button design" type="button">Дизайн</button>
             </li>
             <li class="item">
-              <button class="button marketing" type="button">Маркетинг</button>
+              <button class="portfolio__button button marketing" type="button">Маркетинг</button>
             </li>
           </ul>
 
           <!--project-->
-          <ul class="project-list list set-card">
-            <li class="project-card set-item">
-              <a class="link project-link project-card project-shadow" href="">
-                <div class="project-slider">
+          <ul class="project__list list set-card">
+            <li class="project__card set-item">
+              <a class="link project__link project__card project__shadow" href="">
+                <div class="project__slider">
                   <img src="./images/img4.jpg" alt="project" width="370" />
-                  <p class="project-desc">
+                  <p class="project__desc">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="project-box">
-                  <h2 class="project-title">Технокряк</h2>
-                  <p class="project-text">Веб-сайт</p>
+                <div class="project__box">
+                  <h2 class="project__title">Технокряк</h2>
+                  <p class="project__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="project-card set-item">
-              <a class="link project-link project-card project-shadow" href="">
-                <div class="project-slider">
+            <li class="project__card set-item">
+              <a class="link project__link project__card project__shadow" href="">
+                <div class="project__slider">
                   <img src="./images/img5.jpg" alt="project" width="370" />
-                  <p class="project-desc">
+                  <p class="project__desc">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="project-box">
-                  <h2 class="project-title">Постер New Orlean vs Golden Star</h2>
-                  <p class="project-text">Дизайн</p>
+                <div class="project__box">
+                  <h2 class="project__title">Постер New Orlean vs Golden Star</h2>
+                  <p class="project__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="project-card set-item">
-              <a class="link project-link project-card project-shadow" href="">
-                <div class="project-slider">
+            <li class="project__card set-item">
+              <a class="link project__link project__card project__shadow" href="">
+                <div class="project__slider">
                   <img src="./images/img6.jpg" alt="project" width="370" />
-                  <p class="project-desc">
+                  <p class="project__desc">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="project-box">
-                  <h2 class="project-title">Ресторан Seafood</h2>
-                  <p class="project-text">Приложение</p>
+                <div class="project__box">
+                  <h2 class="project__title">Ресторан Seafood</h2>
+                  <p class="project__text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="project-card set-item">
-              <a class="link project-link project-card project-shadow" href="">
-                <div class="project-slider">
+            <li class="project__card set-item">
+              <a class="link project__link project__card project__shadow" href="">
+                <div class="project__slider">
                   <img src="./images/img7.jpg" alt="project" width="370" />
-                  <p class="project-desc">
+                  <p class="project__desc">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="project-box">
-                  <h2 class="project-title">Проект Prime</h2>
-                  <p class="project-text">Маркетинг</p>
+                <div class="project__box">
+                  <h2 class="project__title">Проект Prime</h2>
+                  <p class="project__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="project-card set-item">
-              <a class="link project-link project-card project-shadow" href="">
-                <div class="project-slider">
+            <li class="project__card set-item">
+              <a class="link project__link project__card project__shadow" href="">
+                <div class="project__slider">
                   <img src="./images/img8.jpg" alt="project" width="370" />
-                  <p class="project-desc">
+                  <p class="project__desc">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="project-box">
-                  <h2 class="project-title">Проект Boxes</h2>
-                  <p class="project-text">Приложение</p>
+                <div class="project__box">
+                  <h2 class="project__title">Проект Boxes</h2>
+                  <p class="project__text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="project-card set-item">
-              <a class="link project-link project-card project-shadow" href="">
-                <div class="project-slider">
+            <li class="project__card set-item">
+              <a class="link project__link project__card project__shadow" href="">
+                <div class="project__slider">
                   <img src="./images/img9.jpg" alt="project" width="370" />
-                  <p class="project-desc">
+                  <p class="project__desc">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="project-box">
-                  <h2 class="project-title">Inspiration has no Borders</h2>
-                  <p class="project-text">Веб-сайт</p>
+                <div class="project__box">
+                  <h2 class="project__title">Inspiration has no Borders</h2>
+                  <p class="project__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="project-card set-item">
-              <a class="link project-link project-card project-shadow" href="">
-                <div class="project-slider">
+            <li class="project__card set-item">
+              <a class="link project__link project__card project__shadow" href="">
+                <div class="project__slider">
                   <img src="./images/img10.jpg" alt="project" width="370" />
-                  <p class="project-desc">
+                  <p class="project__desc">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="project-box">
-                  <h2 class="project-title">Издание Limited Edition</h2>
-                  <p class="project-text">Дизайн</p>
+                <div class="project__box">
+                  <h2 class="project__title">Издание Limited Edition</h2>
+                  <p class="project__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="project-card set-item">
-              <a class="link project-link project-card project-shadow" href="">
-                <div class="project-slider">
+            <li class="project__card set-item">
+              <a class="link project__link project__card project__shadow" href="">
+                <div class="project__slider">
                   <img src="./images/img11.jpg" alt="project" width="370" />
-                  <p class="project-desc">
+                  <p class="project__desc">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="project-box">
-                  <h2 class="project-title">Проект LAB</h2>
-                  <p class="project-text">Маркетинг</p>
+                <div class="project__box">
+                  <h2 class="project__title">Проект LAB</h2>
+                  <p class="project__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="project-card set-item">
-              <a class="link project-link project-card project-shadow" href="">
-                <div class="project-slider">
+            <li class="project__card set-item">
+              <a class="link project__link project__card project__shadow" href="">
+                <div class="project__slider">
                   <img src="./images/img12.jpg" alt="project" width="370" />
-                  <p class="project-desc">
+                  <p class="project__desc">
                     Ресурс предлагает комплексные предложения с разным уровнем функционала и
                     сервисов. Все это позволит посетителю получить исчерпывающие сведения о компании
                     или частном лице.
                   </p>
                 </div>
-                <div class="project-box">
-                  <h2 class="project-title">Growing Business</h2>
-                  <p class="project-text">Приложение</p>
+                <div class="project__box">
+                  <h2 class="project__title">Growing Business</h2>
+                  <p class="project__text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -240,15 +240,16 @@
       </section>
     </main>
     <!--Footer-->
-    <footer class="footer-content">
-      <div class="footer-container">
-        <div class="footer-adress">
-          <a lang="en" class="logo" href="./index.html"><span class="logo-web">Web</span>Studio</a>
-          <address class="address">
-            <ul class="footer-link list">
+
+    <footer class="footer__content">
+      <div class="footer__container">
+        <div class="footer__adress">
+          <a lang="en" class="logo" href="./index.html"><span class="logo--web">Web</span>Studio</a>
+          <address class="footer__address">
+            <ul class="footer__link list">
               <li class="item">
                 <a
-                  class="map-link"
+                  class="map__link"
                   href="https://goo.gl/maps/piqngm7oDQpEDh6u6"
                   target="_blank"
                   rel="noopener nofollow noreferrer"
@@ -256,56 +257,56 @@
                 >
               </li>
               <li class="item">
-                <a class="link" href="mailto:info@example.com">info@example.com</a>
+                <a class="footer__link link" href="mailto:info@example.com">info@example.com</a>
               </li>
               <li class="item"><a class="link" href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
           </address>
         </div>
 
-        <div class="footer-social-thumb">
-          <h3 class="footer-social-title">присоединяйтесь</h3>
-          <ul class="footer-social-links list">
-            <li class="footer-social-link">
-              <a class="footer-link-icon" href="">
-                <svg class="social-icon" width="20px" height="20px">
+        <div class="social">
+          <h3 class="social__title footer__title">присоединяйтесь</h3>
+          <ul class="social__list list">
+            <li class="social__item">
+              <a class="social__link link" href="">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-link">
-              <a class="footer-link-icon" href="">
-                <svg class="social-icon" width="20px" height="20px">
+            <li class="social__item">
+              <a class="social__link link" href="">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-link">
-              <a class="footer-link-icon" href="">
-                <svg class="social-icon" width="20px" height="20px">
+            <li class="social__item">
+              <a class="social__link link" href="">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="footer-social-link">
-              <a class="footer-link-icon" href="" aria-label="icon-linkedin">
-                <svg class="social-icon" width="20px" height="20px">
+            <li class="social__item">
+              <a class="social__link link" href="" aria-label="icon-linkedin">
+                <svg class="social__icon" width="20px" height="20px">
                   <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
           </ul>
         </div>
-        <div class="form-container subscribe-container">
-          <p class="form-title footer-social-title">Подпишитесь на рассылку</p>
+        <div class="form__container subscribe__container">
+          <p class="form__title social__title">Подпишитесь на рассылку</p>
           <form
-            class="footer-subscribe form-subscribe js-speaker-form"
+            class="footer__subscribe form__subscribe js-speaker-form"
             action="subscribe"
             autocomplete="off"
           >
-            <label class="subscribe-label">
+            <label class="subscribe__label">
               <input
-                class="subscribe-input"
+                class="subscribe__input"
                 type="email"
                 name="email"
                 placeholder="E-mail"
@@ -313,9 +314,9 @@
               />
             </label>
 
-            <button class="subscribe-button" type="submit">
+            <button class="subscribe__button" type="submit">
               Подписаться
-              <svg class="subscribe-icon">
+              <svg class="subscribe__icon">
                 <use
                   href="./images/icons2.svg#icon-icon-telegram"
                   width="24"
