--- a/portfolio.html
+++ b/portfolio.html
@@ -21,13 +21,15 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
 
-    <link rel="stylesheet" href="./css/styles.css" />
+    
+    <link rel="stylesheet" href="./css/main.min.css" />
+
   </head>
   <body>
     <!--header-->
 
-    <header class="header__content">
-      <div class="container container__nav">
+    <header class="header">
+      <div class="container header__container">
         <nav class="header__nav">
           <a lang="en" class="logo" href="./index.html"><span class="logo--web">Web</span>Studio</a>
 
