--- a/index.html
+++ b/index.html
@@ -413,8 +413,8 @@
 
     <footer class="footer__content">
       <div class="footer__container">
-        <div class="footer__adress">
-          <a lang="en" class="logo" href="./index.html"><span class="logo--web">Web</span>Studio</a>
+        <div class="footer__address">
+          <a lang="en" class="footer__logo" href="./index.html"><span class="logo--web">Web</span>Studio</a>
           <address class="footer__address">
             <ul class="footer__link list">
               <li class="item">
