--- a/portfolio.html
+++ b/portfolio.html
@@ -246,7 +246,7 @@
     <footer class="footer__content">
       <div class="footer__container">
         <div class="footer__adress">
-          <a lang="en" class="logo" href="./index.html"><span class="logo--web">Web</span>Studio</a>
+          <a lang="en" class="footer__logo" href="./index.html"><span class="logo--web">Web</span>Studio</a>
           <address class="footer__address">
             <ul class="footer__link list">
               <li class="item">
