--- a/index.html
+++ b/index.html
@@ -27,16 +27,16 @@
         <nav class="header__nav">
           <a lang="en" class="logo" href="./index.html"><span class="logo--web">Web</span>Studio</a>
 
-          <ul class="header__link list">
-            <li class="item is--active"><a class="link link__current" href="./index.html">Студия</a></li>
-            <li class="item"><a class="link" href="./portfolio.html">Портфолио</a></li>
-            <li class="item"><a class="link" href="./index.html">Контакты</a></li>
+          <ul class="header__list list">
+            <li class="header__list-item is--active"><a class="link link__current" href="./index.html">Студия</a></li>
+            <li class="header__list-item"><a class="link" href="./portfolio.html">Портфолио</a></li>
+            <li class="header__list-item"><a class="link" href="./index.html">Контакты</a></li>
           </ul>
         </nav>
 
-        <ul class="contact__link link">
-          <li class="item item icon">
-            <a class="link" href="mailto:info@devstudio.com">
+        <ul class="contact__link list">
+          <li class="contact__link item item-icon">
+            <a class="contact__link link" href="mailto:info@devstudio.com">
               <svg class="icon__mail" width="16" height="12">
                 <use href="./images/icons.svg#icon-mail"></use>
               </svg>
@@ -44,8 +44,8 @@
             </a>
           </li>
 
-          <li class="item item icon">
-            <a class="link" href="tel:+380961111111">
+          <li class="contact__link item item-icon">
+            <a class="contact__link link" href="tel:+380961111111">
               <svg class="icon__tel" width="10" height="16">
                 <use href="./images/icons.svg#icon-smartphone"></use>
               </svg>
