--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,8 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css"
     />
 
-    
     <link rel="stylesheet" href="./css/main.min.css" />
+   
 
   </head>
   <body>
@@ -33,12 +33,12 @@
         <nav class="header__nav">
           <a lang="en" class="logo" href="./index.html"><span class="logo--web">Web</span>Studio</a>
 
-          <ul class="header__link list">
-            <li class="item"><a class="link" href="./index.html">Студия</a></li>
-            <li class="item is--active">
+          <ul class="header__list list">
+            <li class="header__list-item"><a class="link" href="./index.html">Студия</a></li>
+            <li class="header__list-item is--active">
               <a class="link link__current" href="./portfolio.html"> Портфолио</a>
             </li>
-            <li class="item"><a class="link" href="./index.html">Контакты</a></li>
+            <li class="header__list-item"><a class="link" href="./index.html">Контакты</a></li>
           </ul>
         </nav>
         <ul class="contact__link link">
